<resources>
    <string name="app_name">HomeWorkOne</string>
    <string name="push">Push</string>
    <string name="second">Второе задание</string>
    <string name="first">К первому заданию</string>
    <string name="Test">Макет в макете</string>
    <string name="First">Первое задание</string>
    <string name="Second">Второе задание</string>
    <string name="Plus">+</string>
    <string name="Four">4</string>
    <string name="Three">3</string>
    <string name="Seven">7</string>
    <string name="Six">6</string>
    <string name="One">1</string>
    <string name="Nine">9</string>
    <string name="Erase">⌫</string>
    <string name="Minus">-</string>
    <string name="Multiply">x</string>
    <string name="Zero">0</string>
    <string name="Divide">÷</string>
    <string name="Eight">8</string>
    <string name="Two">2</string>
    <string name="Five">5</string>
    <string name="Clean">AC</string>
    <string name="Equals">=</string>
    <string name="Change_theme">Выбрать тему:</string>
    <string name="Standart_Theme">Стандартная</string>
    <string name="Blue_Theme">Голубая</string>
    <string name="Green_Theme">Зеленая</string>
    <string name="apply">Применить</string>
</resources>