<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fon" />


    <TextView
        android:id="@+id/text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Plus"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SetTheme"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/Change_theme"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/Plus"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#ffd700"
        android:text="@string/Plus"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Minus"
        app:layout_constraintTop_toBottomOf="@+id/Nine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Four"
        style="@style/MyTheme"
        android:text="@string/Four"

        app:layout_constraintBottom_toTopOf="@+id/One"
        app:layout_constraintEnd_toStartOf="@+id/Five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Three"
        style="@style/MyTheme"
        android:text="@string/Three"

        app:layout_constraintBottom_toTopOf="@+id/Equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Two"
        app:layout_constraintTop_toBottomOf="@+id/Six" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Seven"
        style="@style/MyTheme"
        android:text="@string/Seven"

        app:layout_constraintBottom_toTopOf="@+id/Four"
        app:layout_constraintEnd_toStartOf="@+id/Eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Six"
        style="@style/MyTheme"
        android:text="@string/Six"

        app:layout_constraintBottom_toTopOf="@+id/Three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Five"
        app:layout_constraintTop_toBottomOf="@+id/Nine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/One"
        style="@style/MyTheme"
        android:text="@string/One"

        app:layout_constraintBottom_toTopOf="@+id/Zero"
        app:layout_constraintEnd_toStartOf="@+id/Two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Nine"
        style="@style/MyTheme"
        android:text="@string/Nine"
        app:layout_constraintBottom_toTopOf="@+id/Six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Eight"
        app:layout_constraintTop_toBottomOf="@+id/Divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Erase"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#e34234"
        android:text="@string/Erase"
        android:textSize="@dimen/Button_textSize"
        app:layout_constraintBottom_toTopOf="@+id/Eight"
        app:layout_constraintEnd_toStartOf="@+id/Divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Multiply"
        app:layout_constraintTop_toBottomOf="@+id/Plus"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Minus"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#ffd700"
        android:text="@string/Minus"
        android:textSize="@dimen/Button_textSize"
        app:layout_constraintBottom_toTopOf="@+id/Erase"
        app:layout_constraintEnd_toStartOf="@+id/Plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Multiply"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#ffd700"
        android:text="@string/Multiply"
        android:textSize="@dimen/Button_textSize"
        app:layout_constraintBottom_toTopOf="@+id/Seven"
        app:layout_constraintEnd_toStartOf="@+id/Erase"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Minus"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Zero"
        style="@style/MyTheme"
        android:text="@string/Zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Clean"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/One" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Divide"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#ffd700"
        android:text="@string/Divide"
        android:textSize="@dimen/Button_textSize"
        app:layout_constraintBottom_toTopOf="@+id/Nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Erase"
        app:layout_constraintTop_toBottomOf="@+id/Plus"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Eight"
        style="@style/MyTheme"

        android:text="@string/Eight"
        app:layout_constraintBottom_toTopOf="@+id/Five"
        app:layout_constraintEnd_toStartOf="@+id/Nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Seven"
        app:layout_constraintTop_toBottomOf="@+id/Erase" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Two"
        style="@style/MyTheme"
        android:text="@string/Two"

        app:layout_constraintBottom_toTopOf="@+id/Clean"
        app:layout_constraintEnd_toStartOf="@+id/Three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/One"
        app:layout_constraintTop_toBottomOf="@+id/Five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Five"
        style="@style/MyTheme"
        android:text="@string/Five"

        app:layout_constraintBottom_toTopOf="@+id/Two"
        app:layout_constraintEnd_toStartOf="@+id/Six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Four"
        app:layout_constraintTop_toBottomOf="@+id/Eight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Clean"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:backgroundTint="#e34234"
        android:text="@string/Clean"
        android:textSize="@dimen/Button_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Zero"
        app:layout_constraintTop_toBottomOf="@+id/Two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Equals"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/Equals"
        android:textSize="@dimen/Button_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Clean"
        app:layout_constraintTop_toBottomOf="@+id/Three" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="549dp" />


</androidx.constraintlayout.widget.ConstraintLayout>