<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D2FFFFFF"
        android:text="@string/Change_theme"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D2FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Theme_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Green_Theme"
            android:textColor="@color/green" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Theme_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Blue_Theme"
            android:textColor="@color/blue"
             />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Theme_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Standart_Theme" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />



</androidx.constraintlayout.widget.ConstraintLayout>